--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,6 @@
 }
 
 body {
-  /* background-color: aquamarine; */
   background-color: #f5f4fa;
   color: #212121;
 
@@ -28,7 +27,7 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   /* временная для визуала */
-  outline: 2px solid teal;
+  /* outline: 2px solid teal; */
 }
 
 /* Логотип */
@@ -45,6 +44,8 @@ body {
 }
 
 .logo .header {
+  margin-right: 70px;
+
   color: var(--primary-text-color);
 }
 
@@ -53,7 +54,29 @@ body {
 }
 
 /* Шапка */
+.mein-nav {
+  display: flex;
+  align-items: center;
+}
+
+nav {
+  display: flex;
+}
+
+.site-nav {
+  display: flex;
+}
+
+/* Уберает крайн. геометрию */
+.site-nav .item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .site-nav .link {
+  display: block;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
   color: var(--primary-text-color);
 
   font-weight: 500;
@@ -74,6 +97,15 @@ body {
   color: var(--accent-color);
 }
 
+.contact-nav {
+  display: flex;
+  margin-left: auto;
+}
+
+.contact-nav .item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .contact-nav .link {
   color: var(--secondary-text-color);
 
@@ -92,6 +124,8 @@ body {
 
 /* Герой */
 .hero {
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
 }
 
@@ -110,9 +144,14 @@ body {
 
 /* Section */
 section {
-  padding-top: 0;
-  padding-bottom: 94px;
+  padding-top: 0px;
+  padding-bottom: 95px;
 }
+
+/* .section.no-padding {
+  padding-top: 0px;
+  padding-bottom: 0px;
+} */
 
 .section-title {
   margin-top: 0;
@@ -126,9 +165,23 @@ section {
 }
 
 /* Секция Наши прeимущества */
+.feature {
+  display: flex;
+}
+
+.feature .item {
+  width: calc((100% - 45px) / 4);
+  margin-right: 15px;
+}
+
+/* Убирает крайн. геометрию у каждого третего */
+.feature .item:nth-child(4n) {
+  margin-right: 0px;
+}
+
 .feature .title {
-  margin-top: 0;
-  margin-bottom: 10;
+  margin-top: 0px;
+  margin-bottom: 10px;
 
   font-weight: 700;
   font-size: 14px;
@@ -146,9 +199,23 @@ section {
 }
 
 /* Секция Чем ми занимаемся */
+.work {
+  display: flex;
+}
+
+.work .item {
+  width: calc((100% - 30px) / 3);
+  margin-right: 15px;
+}
+
+/* Убирает крайн. геометрию у каждого третего */
+.work .item:nth-child(3n) {
+  margin-right: 0px;
+}
+
 .work .title {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin-top: 0px;
+  margin-bottom: 0px;
 
   color: var(--primary-white-color);
 
@@ -159,7 +226,18 @@ section {
 
 /* Секция Наша команда */
 .team {
+  display: flex;
+
   background-color: #f5f4fa;
+}
+
+.team .item {
+  width: calc((100% - 45px) / 4);
+  margin-right: 15px;
+}
+
+.team .item:nth-child(4n) {
+  margin-right: 0px;
 }
 
 .team .list {
@@ -183,6 +261,29 @@ section {
   line-height: 1.19em;
 }
 
+.team-sn {
+  display: flex;
+}
+
+.team-sn .item {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+/* Секция Постоянные клиенты */
+.clients-list {
+  display: flex;
+}
+
+.clients-list .item {
+  width: calc((100% - 75px) / 5);
+  margin-right: 15px;
+}
+
+.clients-list .item:nth-child(6n) {
+  margin-right: 0px;
+}
+
 /* Секция Подвал */
 footer {
   background-color: #2f303a;
@@ -190,14 +291,52 @@ footer {
   color: var(--primary-white-color);
 }
 
+.mein-footer {
+  display: flex;
+}
+
+.logo-address {
+  display: flex;
+  flex-wrap: wrap;
+  width: 300px;
+  margin-right: 215px;
+}
+
 .address {
   font-size: 14px;
-  line-height: 1.71em;
+  line-height: 1 0.71em;
+}
+
+.contact-footer {
+  color: var(--secondary-text-color);
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14em;
+  letter-spacing: 0.02em;
 }
 
 b {
   font-size: 14px;
   line-height: 1.71em;
+}
+
+.b {
+  margin-right: 15px;
+}
+
+.footer-sn {
+  display: flex;
+}
+
+.footer-sn .item {
+  margin-right: 15px;
+}
+
+.footer-and {
+  display: flex;
+  margin-left: auto;
+  align-items: center;
 }
 
 /* Button */
@@ -226,19 +365,70 @@ b {
 
 .button.secondery {
   color: var(--primary-text-color);
-  background-color: #f5f4fa;
+  /* background-color: #f5f4fa; */
+  background-color: tan;
 }
 
 /* Портфолио */
+.container-portfolio {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-bottom: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
+  /* временная для визуала */
+  /* outline: 2px solid teal; */
+}
+
 .bar {
   text-align: center;
+
+  margin-bottom: 15px;
 }
+
+.examples {
+  display: flex;
+  /* Разрешает перенос на следуюцюю строку */
+  flex-wrap: wrap;
+}
+
+.examples .item {
+  /* width: 380px; */
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+
+  /* background-color: rgb(95, 43, 148); */
+}
+
+/* Убирает крайн. геометрию у каждого третего */
+.examples .item:nth-child(3n) {
+  margin-right: 0px;
+}
+
+/* Убирает крайн. геометрию у последних трех */
+.examples .item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+
+/* Альтернатива */
+/* .examples .item:not( :nth-child(3n)) {
+  margin-right: 30px;
+} */
+
+/* .examples .item:not( :nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
+} */
 
 .examples-link {
   text-decoration: none;
 }
 
 .examples-descriptions {
+  margin-top: 0;
+  margin-bottom: 10px;
+
   color: var(--primary-white-color);
 
   font-size: 18px;
@@ -246,6 +436,9 @@ b {
 }
 
 .examples-title {
+  margin-top: 0;
+  margin-bottom: 10;
+
   color: var(--primary-text-color);
 
   font-weight: 700;
@@ -255,6 +448,9 @@ b {
 }
 
 .examples-text {
+  margin-top: 0;
+  margin-bottom: 10;
+
   color: var(--secondary-text-color);
 
   font-size: 16px;
